--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="posts/what-is-pitoco.html"><strong aria-hidden="true">1.</strong> What is Pitoco?</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html">About Me</a></li><li class="chapter-item expanded "><a href="pitoco.html"><strong aria-hidden="true">1.</strong> What is Pitoco?</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -144,10 +144,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>One project I have been working on is <a href="https://github.com/pfeodrippe/pitoco">Pitoco</a>, it’s written in Clojure and was originally created with the purpose of inferring REST HTTP requests through packet capture heavily inspired in startup called <a href="https://www.akitasoftware.com/blog">Akita</a>. But, being in Clojure, we start about doing things for the language itself.</p>
-<p>I want to be in the REPL and, when needed, have a convenient way to check what’s the format of the data I’m working on for a particular workflow. So in pitoco I have created a <code>pitoco.instrument</code> namespace where you can instrument the vars, run some code (e.g. some test) which is where we collect inputs and outputs for the instrumented var and then infer the schemas for each of them (in <a href="https://github.com/metosin/malli">Malli</a> format).  I will not go further on this topic as we will talk about something else, but you can see a <a href="https://youtu.be/MloJSCl38d0">small video demonstrating this feature</a>. This is all good and nice, but what we can do more?</p>
-<p>A inspiring talk by <a href="https://youtu.be/ElHi2h9Ho6M">Deech</a> about static introspection leaded to some ideas about how to leverage the inferred schemas we collected. It’s possible to match one schema against the other, but could we have some kind of  schema similarity metric so we can try to find more interesting relationships among our schemas? This is what I will talk about, explaining my workflow as a noob at this area.</p>
-<p>TODO</p>
+                        <h1 id="about-me"><a class="header" href="#about-me">About Me</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="what-is-pitoco"><a class="header" href="#what-is-pitoco">What is Pitoco?</a></h1>
 
                     </main>
 
