deploy: 40022609a8a36b887f4ce92a3b3a5b23beb0d3fa

--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html">About Me</a></li><li class="chapter-item expanded "><a href="posts/pitoco.html"><strong aria-hidden="true">1.</strong> What is Pitoco?</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html">About Me</a></li><li class="chapter-item expanded "><a href="posts/pitoco.html"><strong aria-hidden="true">1.</strong> Pitoco</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -145,6 +145,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="about-me"><a class="header" href="#about-me">About Me</a></h1>
+<p>Hi o/</p>
+<p>I'm Paulo Feodrippe, a software engineer contractor based on SP - Brazil. I'm interested in distributed systems, development tooling and my wife (besides my little dog called Pitoco).</p>
+<p>My favorite language is Clojure.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="pitoco"><a class="header" href="#pitoco">Pitoco</a></h1>
 <p>One project I have been working recently is <a href="https://github.com/pfeodrippe/pitoco">Pitoco</a>, it’s written in Clojure and was originally created with the purpose of inferring REST HTTP requests using packet capture, heavily inspired in a startup called <a href="https://www.akitasoftware.com/blog">Akita</a>. </p>
 
