--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html">About Me</a></li><li class="chapter-item expanded "><a href="posts/pitoco.html"><strong aria-hidden="true">1.</strong> What is Pitoco?</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html">About Me</a></li><li class="chapter-item expanded "><a href="posts/pitoco.html"><strong aria-hidden="true">1.</strong> Pitoco</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
