--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html" class="active">About Me</a></li><li class="chapter-item expanded "><a href="posts/pitoco.html"><strong aria-hidden="true">1.</strong> What is Pitoco?</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about.html" class="active">About Me</a></li><li class="chapter-item expanded "><a href="posts/pitoco.html"><strong aria-hidden="true">1.</strong> Pitoco</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -144,6 +144,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="about-me"><a class="header" href="#about-me">About Me</a></h1>
+<p>Hi o/</p>
+<p>I'm Paulo Feodrippe, a software engineer contractor based on SP - Brazil. I'm interested in distributed systems, development tooling and my wife (besides my little dog called Pitoco).</p>
+<p>My favorite language is Clojure.</p>
 
                     </main>
 
