deploy: 9432f7f4fa3c0ce8c7fb655dcf4dc80b4adb175e

--- a/print.html
+++ b/print.html
@@ -150,6 +150,11 @@
 <p>My favorite language is Clojure.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="pitoco"><a class="header" href="#pitoco">Pitoco</a></h1>
 <p>One project I have been working recently is <a href="https://github.com/pfeodrippe/pitoco">Pitoco</a>, it’s written in Clojure and was originally created with the purpose of inferring REST HTTP requests using packet capture, heavily inspired in a startup called <a href="https://www.akitasoftware.com/blog">Akita</a>. </p>
+<p>The first place where I tested it was in my daily job (Gravie, a healthcare startup company<sup class="footnote-reference"><a href="# gravie">1</a></sup>). At Gravie there is a legacy app in Grails (we are migrating/doing new services to/in Clojure) which exposes many REST endpoints and I wanted to understand more of it, at the same time I was reading some awesome posts from Akita and that was the trigger which lead to this project.</p>
+<div class="footnote-definition" id=" gravie"><sup class="footnote-definition-label">1</sup>
+<p>(we are hiring, send a email to <a href="posts/mcameron@gravie.com">our CTO</a>)</p>
+</div>
+<p>TODO Another usage was for Cypress tests.</p>
 
                     </main>
 
