--- a/index.html
+++ b/index.html
@@ -145,8 +145,11 @@
                     <main>
                         <h1 id="about-me"><a class="header" href="#about-me">About Me</a></h1>
 <p>Hi o/</p>
-<p>I'm Paulo Feodrippe, a software engineer contractor based on SP - Brazil. I'm interested in distributed systems, development tooling and my wife (besides my little dog called Pitoco).</p>
-<p>My favorite language is Clojure.</p>
+<p>I'm Paulo Feodrippe, a software engineer contractor based on SP - Brazil. I'm interested in distributed systems, development tooling and my wife (besides my little dog called Pitoco). </p>
+<p>I've been developing systems since 2015, and working with everyone's favorite language<sup class="footnote-reference"><a href="#clojure">1</a></sup> since 2017.</p>
+<div class="footnote-definition" id="clojure"><sup class="footnote-definition-label">1</sup>
+<p>Clojure, of course 😬</p>
+</div>
 
                     </main>
 
