--- a/print.html
+++ b/print.html
@@ -146,15 +146,23 @@
                     <main>
                         <h1 id="about-me"><a class="header" href="#about-me">About Me</a></h1>
 <p>Hi o/</p>
-<p>I'm Paulo Feodrippe, a software engineer contractor based on SP - Brazil. I'm interested in distributed systems, development tooling and my wife (besides my little dog called Pitoco).</p>
-<p>My favorite language is Clojure.</p>
+<p>I'm Paulo Feodrippe, a software engineer contractor based on SP - Brazil. I'm interested in distributed systems, development tooling and my wife (besides my little dog called Pitoco). </p>
+<p>I've been developing systems since 2015, and working with everyone's favorite language<sup class="footnote-reference"><a href="#clojure">1</a></sup> since 2017.</p>
+<div class="footnote-definition" id="clojure"><sup class="footnote-definition-label">1</sup>
+<p>Clojure, of course 😬</p>
+</div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="pitoco"><a class="header" href="#pitoco">Pitoco</a></h1>
 <p>One project I have been working recently is <a href="https://github.com/pfeodrippe/pitoco">Pitoco</a>, it’s written in Clojure and was originally created with the purpose of inferring REST HTTP requests using packet capture, heavily inspired in a startup called <a href="https://www.akitasoftware.com/blog">Akita</a>. </p>
-<p>The first place where I tested it was in my daily job (Gravie, a healthcare startup company<sup class="footnote-reference"><a href="# gravie">1</a></sup>). At Gravie there is a legacy app in Grails (we are migrating/doing new services to/in Clojure) which exposes many REST endpoints and I wanted to understand more of it, at the same time I was reading some awesome posts from Akita and that was the trigger which lead to this project.</p>
-<div class="footnote-definition" id=" gravie"><sup class="footnote-definition-label">1</sup>
+<p>The first place where I tested it was in my daily job (Gravie, a healthcare startup company<sup class="footnote-reference"><a href="#gravie">1</a></sup>). At Gravie there is a legacy app in Grails (we are migrating/doing new services to/in Clojure) which exposes many REST endpoints and I wanted to understand more what's was there, this happened at the same time as I was reading some awesome posts from the Akita blog and that was the trigger which leaded to this project. Let's see how you could use it in your project.</p>
+<h2 id="capture-packet-data"><a class="header" href="#capture-packet-data">Capture packet data</a></h2>
+<p>Imagine you have your server for integration or E2E tests at  <code>localhost:8005</code>. You have no OpenAPI schema or most of the documentation is outdated, you can start <code>tcpdump</code> to capture packet data (which we will see how to process later).</p>
+<pre><code class="language-bash">tcpdump -i lo0 'port 8005' -w lo.pcap
+</code></pre>
+<p>In some other terminal you can exercise the endpoints (e.g. by running the tests). When the exercise is finished, stop <code>tcpdump</code> run and check that you have a <code>lo.pcap</code> file. These are your TCP packets in some binary format (I'm not a network person, so pardon my language)</p>
+<p>TODO Another usage was for Cypress tests.</p>
+<div class="footnote-definition" id="gravie"><sup class="footnote-definition-label">1</sup>
 <p>(we are hiring, send a email to <a href="posts/mcameron@gravie.com">our CTO</a>)</p>
 </div>
-<p>TODO Another usage was for Cypress tests.</p>
 
                     </main>
 
